data/derived/comb/progs/unify/prog1263.ml.out
Characters 38-51:
  if n >0 then digitsOfInt n/10::[n mod 10]
               ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
